--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 blog_theme: light # Or use dark
 name: Chalk
 paginate: 25
-url: http://nas3f.github.io
+url: http://chalk.nielsenramon.com
 
 
 # Optional settings
@@ -17,10 +17,10 @@ scrollappear_enabled: true # Change to false to disable
 tag_nav_enabled: false # Change to true if you wish to show an additional 'tag-list' navigation below the header
 theme_toggle: false # Change to true if you wish to show an icon in the navigation for dynamic theme toggling
 social:
-  dribbble:  # Add your Dribbble handle
+  dribbble: nielsenramon # Add your Dribbble handle
   facebook: # Add your Facebook handle
   flickr: # Add your Flickr handle
-  github:  # Add your GitHub handle
+  github: nielsenramon # Add your GitHub handle
   linkedin: # Add your LinkedIn handle
   twitter: nielsenramon # Add your Twitter handle
   email: # Add your Email address
