--- a/_config.yml
+++ b/_config.yml
@@ -19,13 +19,13 @@ defaults:
 description: Stylish Jekyll Theme
 author:
   name: dbyll
-  email: dbyll@ismaildemirbilek.com
-  github: dbtek
-  twitter: dbtek
-  pinterest: asd123
-  linkedin: asd123
-  bio: Your stylish, minimalist theme!
-  email_md5: 726351295ec82e145928582f595aa3aa
+  email: nnas3f@gmail.com
+  github: nas3f
+  twitter: nnas3f
+  pinterest: 
+  linkedin: 
+  bio: Experimenter, Breaker , Security Lunatic
+  email_md5: 
 
 rss_path: feed.xml
 categories_path: categories.html
