--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ defaults:
       title: Nasef
 
 description: Stylish Jekyll Theme
-author:
+author:Nas3f
   name: Nas3f
   email: nnas3f@gmail.com
   github: nas3f
@@ -25,7 +25,7 @@ author:
   pinterest: 
   linkedin: 
   bio: Experimenter, Breaker , Security Lunatic
-  email_md5: 4ec7fec11f5de851e3ba445b2b6a0450
+  email_md5: 4ec7fec11f5de851e3ba445b2b6a04500
 
 rss_path: feed.xml
 categories_path: categories.html
