--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Nas3f's Lab
+title: 0_0
 author: nas3f
 email: nnas3f@gmail.com
 description: > # this means to ignore newlines until "show_exerpts:"
@@ -19,8 +19,8 @@ plainwhite:
 
   # generate social links in footer
   social_links:
-    twitter: nnas3f
-    github:  nas3f
+    twitter:nnas3f
+    github:nas3f
     #linkedIn: 
     #rss: rss
     # dribbble: jekyll
