--- a/_config.yml
+++ b/_config.yml
@@ -1,30 +1,33 @@
-title:0_0
-author:nas3f
-email:nnas3f@gmail.com
-description:nasef a security lunatic
-show_excerpts:true # set to true to show excerpts on the homepage
+title: Your awesome title
+author: GitHub User
+email: your-email@domain.com
+description: > # this means to ignore newlines until "show_exerpts:"
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
+show_excerpts: true # set to true to show excerpts on the homepage
 
 # Minima date format
 # refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
 sass:
-  sass_dir:_sass
+  sass_dir: _sass
 plainwhite:
-  name:Nasef
-  tagline:Expermenter. Security Lunatic 
-  date_format:"%b %-d, %Y"
-  sitemap:true # set to true to generate sitemap.xml content
+  name: Adam Denisov
+  tagline: Developer. Designer
+  date_format: "%b %-d, %Y"
+  sitemap: true # set to true to generate sitemap.xml content
 
   # generate social links in footer
   social_links:
-    twitter:nnas3f
-    github:nas3f
-    #linkedIn: 
-    #rss: rss
+    twitter: thelehhman
+    github:  thelehhman
+    linkedIn: in/thelehhman
+    rss: rss
     # dribbble: jekyll
     # facebook: jekyll
     # flickr:   jekyll
     # instagram: jekyll
-     linkedin:muhammadnasef
+    # linkedin: jekyll
     # pinterest: jekyll
     # youtube: jekyll
     # youtube_channel: UC8CXR0-3I70i1tfPg1PAE1g
@@ -46,7 +49,7 @@ plainwhite:
 # - about.md
 
 # Build settings
-theme:plainwhite
+theme: plainwhite
 
 plugins:
   - jekyll-seo-tag
