--- a/_config.yml
+++ b/_config.yml
@@ -1,23 +1,42 @@
-show_excerpts: true # set to true to show excerpts on the homepage
+title:  Breaaaaak
+author: nas3f
+email:  nnas3f@gmail.com
+description:    > # this means to ignore newlines until "show_exerpts:"
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
+show_excerpts:  true # set to true to show excerpts on the homepage
 
-
+# Minima date format
+# refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
 sass:
   sass_dir: _sass
 plainwhite:
   name: Muhammad Nasef
-  tagline: Experimenter. Security Lunatic
-  date_format: "%b %-d, %Y"
-  sitemap: true # set to true to generate sitemap.xml content
+  tagline:  Experimenter. Security Lunatic
+  date_format:  "%b %-d, %Y"
+  sitemap:  true # set to true to generate sitemap.xml content
 
 remote_theme: thelehhman/plainwhite-jekyll
 
   # generate social links in footer
   social_links:
-    twitter: nnas3f
-    github:  nas3f
-    linkedIn: in/muhammadnasef
+    twitter:    nnas3f
+    github: nas3f
+    linkedIn:   in/muhammadnasef
     rss: rss
-   
+    # dribbble: jekyll
+    # facebook: jekyll
+    # flickr:   jekyll
+    # instagram: jekyll
+    # linkedin: jekyll
+    # pinterest: jekyll
+    # youtube: jekyll
+    # youtube_channel: UC8CXR0-3I70i1tfPg1PAE1g
+    # youtube_channel_name: CloudCannon
+    # telegram: jekyll
+    # googleplus: +jekyll
+    # microdotblog: jekyll
 
     # Mastodon instances
     # mastodon:
@@ -32,7 +51,7 @@ remote_theme: thelehhman/plainwhite-jekyll
 # - about.md
 
 # Build settings
-theme: plainwhite
+theme:  plainwhite
 
 plugins:
   - jekyll-seo-tag
