--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,27 @@
+title: Your awesome title
+author: GitHub User
+email: your-email@domain.com
+description: > # this means to ignore newlines until "show_exerpts:"
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
 show_excerpts: true # set to true to show excerpts on the homepage
+
+# Minima date format
+# refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
 sass:
   sass_dir: _sass
 plainwhite:
-  name: Muhammad Nasef
-  tagline: Experimenter. Security Lunatic
+  name: Adam Denisov
+  tagline: Developer. Designer
   date_format: "%b %-d, %Y"
   sitemap: true # set to true to generate sitemap.xml content
 
-remote_theme: thelehhman/plainwhite-jekyll
-
   # generate social links in footer
   social_links:
-    twitter: nnas3f
-    github: nas3f
-    linkedIn:  in/muhammadnasef
+    twitter: thelehhman
+    github:  thelehhman
+    linkedIn: in/thelehhman
     rss: rss
     # dribbble: jekyll
     # facebook: jekyll
