--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ sass:
   sass_dir: _sass
 plainwhite:
   name: Nasef
-  tagline: Experimenter. Security Lunatic
+  tagline: Experimenter.
   date_format: "%b %-d, %Y"
   sitemap: true # set to true to generate sitemap.xml content
 
