--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ show_excerpts: false # set to true to show excerpts on the homepage
 sass:
   sass_dir: _sass
 plainwhite:
-  name: NASEF
+  name: NAS3F
   tagline: EXPERIMENTER
   date_format: "%b %-d, %Y"
   sitemap: true # set to true to generate sitemap.xml content
