--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Security Lab
+title: Nas3f - Welcome to my lab 
 author: nas3f
 email: nnas3f@gmail.com
 description: > # this means to ignore newlines until "show_exerpts:"
